--- a/ios/Flutter/App.framework/flutter_assets/AssetManifest.json
+++ b/ios/Flutter/App.framework/flutter_assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/cartman.svg":["assets/cartman.svg"],"assets/human_animation.flr":["assets/human_animation.flr"],"assets/thread_default_image.svg":["assets/thread_default_image.svg"]}
