--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_svg: ^0.12.0
+  flare_flutter: ^1.3.6
+  sprintf: ^4.0.2
+  scoped_model: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +45,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/thread_default_image.svg
+    - assets/cartman.svg
+    - assets/human_animation.flr
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
