--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flare_flutter: ^1.3.6
   sprintf: ^4.0.2
   scoped_model: ^1.0.1
+  date_format: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,30 @@ flutter:
     - assets/thread_default_image.svg
     - assets/cartman.svg
     - assets/human_animation.flr
+    - assets/speakers/jack.svg
+    - assets/speakers/jacques.svg
+    - assets/speakers/jai.svg
+    - assets/speakers/jake.svg
+    - assets/speakers/james.svg
+    - assets/speakers/jana.svg
+    - assets/speakers/jaqueline.svg
+    - assets/speakers/jean.svg
+    - assets/speakers/jed.svg
+    - assets/speakers/jenni.svg
+    - assets/speakers/jeri.svg
+    - assets/speakers/jerry.svg
+    - assets/speakers/jess.svg
+    - assets/speakers/jocelyn.svg
+    - assets/speakers/jodi.svg
+    - assets/speakers/joe.svg
+    - assets/speakers/jolee.svg
+    - assets/speakers/jon.svg
+    - assets/speakers/jordan.svg
+    - assets/speakers/josephine.svg
+    - assets/speakers/josh.svg
+    - assets/speakers/jude.svg
+    - assets/speakers/julie.svg
+    - assets/speakers/jazebelle.svg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
