--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.0"
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "assets/launcher/icon.png"
+  image_path_android: "assets/launcher/icon.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -49,7 +56,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/cartman.svg
+    - assets/navbar_logo.svg
+    - assets/icon.png
     - assets/human_animation.flr
     - assets/speakers/jack.svg
     - assets/speakers/jacques.svg
@@ -79,8 +87,6 @@ flutter:
     - assets/threads/thread_tech_image.jpg
     - assets/threads/thread_workshop_image.jpg
     - assets/threads/thread_default_image.jpg
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
